--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@
 
 .bg-kakao {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url("../image/kakao.jpg");
+    url("../image/kakao.png");
   background-size: cover;
   background-position: center;
 }
